tests/snapshots/cmd_generate_workflow_call__multiple_workflow_call_consumers.snap
---
source: tests/cmd_generate_workflow_call.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_shared_build.yaml
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/_shared_build.ts ---
export const build = workflow("Shared Build", {
  on: triggers({
    workflow_call: {
      inputs: {
        target: input("string", { required: true }),
      },
      outputs: {
        artifact: { description: "Build artifact" },
      },
    },
  }),
  jobs(ctx) {
    const b = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run(`cargo build --target ${ctx.inputs.target}`)
        return { artifact: "build.tar.gz" }
      }
    })
    return { artifact: b.outputs.artifact }
  }
})
--- .github/ghat/workflows/ci.ts ---
import { build } from "./_shared_build.ts"

workflow("CI", {
  on: triggers({ pull_request: ["main"] }),
  jobs(ctx) {
    ctx.uses("Build Linux", build, {
      with: { target: "x86_64-unknown-linux-gnu" },
    })
    ctx.uses("Build Mac", build, {
      with: { target: "x86_64-apple-darwin" },
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  pull_request:
    branches:
    - main
jobs:
  build_linux:
    name: Build Linux
    uses: ./.github/workflows/generated_shared_build.yaml
    with:
      target: x86_64-unknown-linux-gnu
  build_mac:
    name: Build Mac
    uses: ./.github/workflows/generated_shared_build.yaml
    with:
      target: x86_64-apple-darwin
--- .github/workflows/generated_shared_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Shared Build
on:
  workflow_call:
    inputs:
      target:
        type: string
        required: true
    outputs:
      artifact:
        description: Build artifact
        value: ${{ jobs.build.outputs.artifact }}
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
    steps:
    - id: step_0
      run: cargo build --target ${{ inputs.target }}
