tests/snapshots/cmd_generate_workflow_call__workflow_call_explicit_secrets.snap
---
source: tests/cmd_generate_workflow_call.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_deploy.yaml
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/deploy.ts ---
const deploy = workflow("Deploy", {
  on: triggers({
    workflow_call: {
      secrets: {
        deploy_token: { description: "Deployment token", required: true },
        api_key: { description: "API key" },
      },
    },
  }),
  jobs(ctx) {
    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      steps() { run("echo deploying") }
    })
  }
})

workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.uses("Run Deploy", deploy, {
      secrets: {
        deploy_token: "${{ secrets.DEPLOY_TOKEN }}",
        api_key: "${{ secrets.API_KEY }}",
      },
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  run_deploy:
    name: Run Deploy
    uses: ./.github/workflows/generated_deploy.yaml
    secrets:
      api_key: ${{ secrets.API_KEY }}
      deploy_token: ${{ secrets.DEPLOY_TOKEN }}
--- .github/workflows/generated_deploy.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Deploy
on:
  workflow_call:
    secrets:
      deploy_token:
        description: Deployment token
        required: true
      api_key:
        description: API key
jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo deploying
