tests/snapshots/cmd_generate_workflow_call__workflow_call_with_string_and_number_inputs.snap
---
source: tests/cmd_generate_workflow_call.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_build.yaml
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/build.ts ---
const build = workflow("Build", {
  on: triggers({
    workflow_call: {
      inputs: {
        version: input("string", { required: true }),
        retries: input("number", { default: 3 }),
      },
    },
  }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run(`echo version=${ctx.inputs.version} retries=${ctx.inputs.retries}`)
      }
    })
  }
})

workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.uses("Run Build", build, {
      with: { version: "1.0.0", retries: 5 },
    })
  }
})
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  workflow_call:
    inputs:
      version:
        type: string
        required: true
      retries:
        type: number
        default: '3'
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo version=${{ inputs.version }} retries=${{ inputs.retries }}
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  run_build:
    name: Run Build
    uses: ./.github/workflows/generated_build.yaml
    with:
      version: 1.0.0
      retries: 5
